@@ -21,6 +21,7 @@
 
 /* 
  * The common base class shared between range array and range
+ * This class should have no direct access by any classes other than Range and RangeArray.
  * 15/06/2012   Wei Song
  *
  *
@@ -37,12 +38,16 @@ namespace netlist {
     RangeArrayCommon(const std::list<boost::shared_ptr<Range> >& rhs) : child(rhs) {}
 
     // helpers
+    std::list<boost::shared_ptr<Range> > const_copy(const Range& maxRange = Range()) const;
     // get the shared range of two range arrays
     std::list<boost::shared_ptr<Range> > op_and(const std::list<boost::shared_ptr<Range> >&) const;
     // get the combined range of two range arrays
     std::list<boost::shared_ptr<Range> > op_or(const std::list<boost::shared_ptr<Range> >&) const;  
     // check whether two range arrays are equal
     bool op_equ(const std::list<boost::shared_ptr<Range> >&) const; 
+    void const_reduce();              // try to reduce the range array using symbolic mathod
+    // the symbolic reduce function used to range list
+    std::list<boost::shared_ptr<Range> > const_reduce(const std::list<boost::shared_ptr<Range> >&) const;
     
   protected:
     std::list<boost::shared_ptr<Range> > child; // the range expressions of the lower dimension
